<resources>
    <string name="app_name">贝壳锁屏防盗</string>
    <string name="app_slogan">让您的手机只为您拥有</string>
    <string name="app_copyright">Copyright © 2015-2017 zhoujianbin</string>
    <string name="app_copyright_info">Copyright © 2015-2017 zhoujianbin.\n All Rights Reserved.</string>
    <string name="app_author_name">杉木君</string>
    <string name="app_author_name_en">zhoujianbin</string>
    <string name="app_author_qq">369542423</string>
    <string name="app_author_weixin">zjb369542423</string>
    <string name="app_author_weibo">zjb369542423</string>

    <string name="ib_calibrate">校准</string>
    <string name="ib_setting">设置</string>
    <string name="ib_more">更多</string>
    <string name="notification_title">自动防盗已开启</string>
    <string name="notification_text">锁屏后放入口袋，拿出不解锁报警</string>

    <string name="navigation_drawer_open">打开菜单</string>
    <string name="navigation_drawer_close">关闭菜单</string>
    <string name="title_about">关于</string>
    <string name="setting_protect">防盗设置</string>
    <string name="title_feedback">反馈</string>
    <string name="setting">设置</string>
    <string name="other">其它</string>
    <string name="sure">确定</string>
    <string name="cancel">取消</string>
    <string name="choose_audio_file">选择音频文件</string>
    <string name="please_install_a_file_manager">手机木有文件管理器，请先安装！</string>
    <string name="open_tone">开启提示音</string>
    <string name="protect_tone">防护提示音</string>
    <string name="warning_sound">报警声</string>
    <string name="file_name">文件名</string>
    <string name="protect_delay">防护延时（灵敏度）</string>
    <string name="waning_delay">报警延时（灵敏度）</string>
    <string name="click_to_skip">点击跳过</string>
    <string name="title_check_upgrade">检测更新</string>
    <string name="version_code">V 1.0.0</string>
    <string name="auto_protect_mode">防盗模式</string>
    <string name="keep_loud">音量保持最大</string>
    <string name="vibrator_not_delay">震动提示不延时</string>
    <string name="title_help">帮助</string>
    <!-- Bugly -->
    <string name="strToastYourAreTheLatestVersion">你已经是最新版了</string>
    <string name="strToastCheckUpgradeError">检查新版本失败，请稍后重试</string>
    <string name="strToastCheckingUpgrade">正在检查，请稍候...</string>
    <string name="strNotificationDownloading">正在下载</string>
    <string name="strNotificationClickToView">点击查看</string>
    <string name="strNotificationClickToInstall">点击安装</string>
    <string name="strNotificationClickToRetry">点击重试</string>
    <string name="strNotificationDownloadSucc">下载完成</string>
    <string name="strNotificationDownloadError">下载失败</string>
    <string name="strNotificationHaveNewVersion">有新版本</string>
    <string name="strNetworkTipsMessage">你已切换到移动网络，是否继续当前下载？</string>
    <string name="strNetworkTipsTitle">网络提示</string>
    <string name="strNetworkTipsConfirmBtn">继续下载</string>
    <string name="strNetworkTipsCancelBtn">取消</string>
    <string name="strUpgradeDialogVersionLabel">版本</string>
    <string name="strUpgradeDialogFileSizeLabel">包大小</string>
    <string name="strUpgradeDialogUpdateTimeLabel">更新时间</string>
    <string name="strUpgradeDialogFeatureLabel">更新说明</string>
    <string name="strUpgradeDialogUpgradeBtn">立即更新</string>
    <string name="strUpgradeDialogInstallBtn">安装</string>
    <string name="strUpgradeDialogRetryBtn">重试</string>
    <string name="strUpgradeDialogContinueBtn">继续</string>
    <string name="strUpgradeDialogCancelBtn">下次再说</string>
</resources>
