<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context="com.zhoujianbin.bklockguard.ui.LaunchActivity">

    <FrameLayout
        android:id="@+id/splash_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/ll_bottom">

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/splash_holder"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/img_launch_ad" />
    </FrameLayout>


    <LinearLayout
        android:id="@+id/ll_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:orientation="horizontal"
        tools:ignore="RtlHardcoded">

        <TextView
            android:id="@+id/skip_view"
            android:layout_width="96dp"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@drawable/background_circle"
            android:gravity="center"
            android:text="@string/click_to_skip"
            android:textColor="@android:color/white"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv_app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:text="@string/app_name"
                android:textColor="@color/primary_text_light"
                android:textSize="28sp" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv_app_slogan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:text="@string/app_slogan"
                android:textColor="@color/primary_text_light"
                android:textSize="18sp" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv_app_copyright"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:text="@string/app_copyright"
                android:textColor="@color/primary_text_light"
                android:textSize="12sp" />
        </LinearLayout>

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/iv_app_logo"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:padding="2dp"
            app:srcCompat="@mipmap/ic_launcher" />
    </LinearLayout>

</RelativeLayout>
