<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorActivityBackground"
    tools:context="com.zhoujianbin.bklockguard.ui.AboutActivity">

    <include layout="@layout/appbar" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="30dp"
                android:background="@color/colorPrimaryDark"
                android:orientation="vertical">

                <android.support.v7.widget.AppCompatImageView
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    app:srcCompat="@mipmap/ic_launcher_round" />

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/app_name"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/tv_version_code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/version_code"
                    android:textColor="@color/white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="20dp"
                        android:orientation="vertical">

                        <android.support.v7.widget.CardView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:cardCornerRadius="5dp"
                            app:cardElevation="2dp">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical"
                                android:padding="10dp">

                                <android.support.v7.widget.AppCompatTextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:padding="10dp"
                                    android:text="作者：杉木君（杉木君工作室）" />

                                <android.support.v7.widget.AppCompatTextView
                                    android:id="@+id/tv_email"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:padding="10dp"
                                    android:text="邮箱：369542423@qq.com" />

                            </LinearLayout>
                        </android.support.v7.widget.CardView>

                        <android.support.v7.widget.CardView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            app:cardCornerRadius="5dp"
                            app:cardElevation="2dp">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">


                                <com.balysv.materialripple.MaterialRippleLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:padding="10dp">

                                    <android.support.v7.widget.AppCompatTextView
                                        android:id="@+id/tv_qq_group"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:drawableRight="@drawable/ic_next_gray_24dp"
                                        android:gravity="center_vertical"
                                        android:padding="8dp"
                                        android:text="交流群：652759380"
                                        tools:ignore="RtlHardcoded" />
                                </com.balysv.materialripple.MaterialRippleLayout>
                            </LinearLayout>
                        </android.support.v7.widget.CardView>

                        <android.support.v7.widget.CardView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            app:cardCornerRadius="5dp"
                            app:cardElevation="2dp">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">


                                <com.balysv.materialripple.MaterialRippleLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:padding="10dp">

                                    <android.support.v7.widget.AppCompatTextView
                                        android:id="@+id/tv_alipay"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:drawableLeft="@drawable/alipay"
                                        android:drawablePadding="10dp"
                                        android:drawableRight="@drawable/ic_next_gray_24dp"
                                        android:gravity="center_vertical"
                                        android:padding="8dp"
                                        android:text="请作者吃糖 o(*￣3￣)o"
                                        tools:ignore="RtlHardcoded" />
                                </com.balysv.materialripple.MaterialRippleLayout>
                            </LinearLayout>
                        </android.support.v7.widget.CardView>

                        <android.support.v7.widget.CardView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            app:cardCornerRadius="5dp"
                            app:cardElevation="2dp">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical"
                                android:padding="10dp">

                                    <android.support.v7.widget.AppCompatTextView
                                        android:id="@+id/tv_copyright"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:layout_alignParentBottom="true"
                                        android:gravity="center"
                                        android:paddingBottom="10dp"
                                        android:paddingLeft="5dp"
                                        android:paddingRight="5dp"
                                        android:paddingTop="10dp"
                                        android:text="@string/app_copyright_info" />
                            </LinearLayout>

                        </android.support.v7.widget.CardView>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>


</android.support.design.widget.CoordinatorLayout>
